# CityFailurePredictor

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pom.xml
.github/workflows/: jira-branch-to-in-progress.yml  jira-pr-merged-to-done.yml  jira-pr-to-code-review.yml
AI/Orchestration/: config_manager.py  request_manager.py
AI/configs/: configs.json
libs/: .gitkeep
logging/: config.alloy  loki-config.yaml
monitoring/: prometheus.yml
services/Service1/: pom.xml
services/Service1/src/main/java/com/citydisruptors/service1/: Service1Application.java
services/Service1/src/test/java/com/citydisruptors/service1/: Service1ApplicationTests.java
services/Service2/: Dockerfile  main.py  pom.xml  pyproject.toml  test.py
services/api-gateway/: Dockerfile  pom.xml
services/api-gateway/src/main/java/com/citydisruptors/api_gateway/: ApiGatewayApplication.java  CorrelationFilter.java  SwaggerController.java
services/api-gateway/src/main/resources/: application.yml  logback-spring.xml
services/api-gateway/src/test/java/com/citydisruptors/api_gateway/: ApiGatewayApplicationTests.java
services/auth-service/: Dockerfile  README.md  pom.xml
services/auth-service/src/main/resources/: application-test.yml  application.yml  logback-spring.xml
services/auth-service/src/main/resources/db/migration/: V1__init.sql
services/config-server/: Dockerfile  HELP.md  pom.xml
services/config-server/src/main/resources/: application.yml
services/service-registry/: Dockerfile  HELP.md  pom.xml
services/service-registry/src/main/resources/: application.yml
(+24 files in other folders)
