[project]
name = "service2"
version = "1.0.0"
description = "Placeholder Python microservice"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-json-logger>=2.0.7",   # structured JSON logs → Logstash
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",               # async test client for FastAPI
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
